# 2D-Physics-Demonstration

./: Cargo.toml  README.org
collision_detection/: Cargo.toml
collision_detection/src/: aabb.rs  collision_tests.rs  contact.rs  info.rs  lib.rs
collision_detection/src/shapes/: circle.rs  collision_shape.rs  convex_poly.rs  line_segment.rs  mod.rs  shape.rs
math_util/: Cargo.toml
math_util/src/: lib.rs
math_util/src/geometry/: mod.rs  tests.rs
physics/: Cargo.toml
physics/src/: collision_hull.rs  lib.rs  physics.rs  tests.rs
physics_demo/: Cargo.toml
physics_tester/src/: main.rs
render_utils/: Cargo.toml
render_utils/src/: lib.rs
