[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "*"
math_util = {path = "../math_util"}
collision_detection = {path = "../collision_detection"}

[dependencies.sdl2]
version = "*"
features = ["gfx"]
