[package]
name = "physics_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "*"
physics = {path = "../physics"}
render_utils = {path = "../render_utils"}
math_util = {path = "../math_util"}

[dependencies.sdl2]
version = "*"
features = ["gfx"]
