[package]
name = "render_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "*"
collision_detection = {path = "../collision_detection"}
math_util = {path = "../math_util"}

[dependencies.sdl2]
version = "*"
features = ["gfx"]
